# AlchemyAnnotate

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run.py
alchemyannotate/: __main__.py  app.py
alchemyannotate/controllers/: app_controller.py  canvas_controller.py  navigation_controller.py
alchemyannotate/models/: annotation.py  class_registry.py  project.py
alchemyannotate/services/: annotation_store.py  autosave.py  format_converter.py  image_loader.py  io_coco.py  io_router.py  io_voc.py  io_yolo.py
alchemyannotate/utils/: constants.py  geometry.py
alchemyannotate/views/: box_list_panel.py  canvas.py  class_panel.py  dialogs.py  main_window.py  sidebar.py
tests/: test_annotation_model.py  test_annotation_store.py  test_geometry.py  test_io_coco.py  test_io_voc.py  test_io_yolo.py
