[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alchemyannotate"
version = "0.1.0"
description = "Lightweight bounding box image annotation tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-qt>=4.0"]

[project.scripts]
alchemyannotate = "alchemyannotate.app:main"

[tool.setuptools.packages.find]
include = ["alchemyannotate*"]
